# cirkit

./: CMakeLists.txt  main.cpp
include/: BitsetManager.cpp  BitsetManager.h  FastaReader.cpp  FastaReader.h  FileReader.cpp  FileReader.h  build_index.cpp  build_index.h  kmer_flathash.cpp  kmer_flathash.h
include/parallel_hashmap/: phmap_dump.h
